Updated dependencies, added Spotless, minor fixes